# python_venv_Automation

./: AUTOMATION_FLOWCHARTS.md  pyproject.toml  pyproject.uv-sample.toml
scripts/: Get-SetupHelp.ps1  Setup-Core.psm1  activate-venv.ps1  setup-core.ps1
scripts/SetupCore/modules/: CodeSigning.psm1  CommandLog.psm1  Compat.psm1  Config.psm1  Detection.psm1  NativeCommand.psm1  PackageManager.psm1  Poetry.psm1  Prechecks.psm1  PythonDiscovery.psm1  Tcl.psm1  Toml.psm1  UI.psm1  UV.psm1  VSCode.psm1  Venv.psm1  Versioning.psm1
scripts4PythonAutomation/: Get-SetupHelp.ps1  setup-core.ps1
scripts4PythonAutomation/SetupCore/modules/: Config.psm1  Detection.psm1  Filesystem.psm1  Poetry.psm1  UV.psm1  VSCode.psm1  Venv.psm1
