# =============================================================================
# Run setup:
#   .\scripts\setup-core.ps1                  # auto-detect (→ uv)
#   .\scripts\setup-core.ps1 -DryRun          # preview only
#   .\scripts\setup-core.ps1 -ExcludeDev      # prod deps only
# =============================================================================

# PEP 621 project metadata (used by uv)
[project]
name            = "pythonAutomation"
version         = "0.1.0"
description     = "Python environment automation and setup tooling."
requires-python = ">=3.11, <3.13"

dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

# uv configuration
# [tool.uv] section is the primary signal used by Get-PreferredPackageManager
# to select uv as the package manager.
[tool.uv]
package = false
dev-dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
